fixed logic for the tip button when node is locked

--- a/src/reply.html
+++ b/src/reply.html
@@ -518,6 +518,7 @@
 				// Check if node is locked for the tip node password
 				isLocked(function (locked) {
 					if (locked) {
+						IS_LOCKED = true;
 						document.getElementById('tip__node-locked').style.display = 'block';
 					}
 				});
