Adjusted tipping functionality

--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,7 @@
 				</div>
 				<div class="feed-item__actions-right">
 					{{#if isPosted}}
-						{{#if hasNodeAddress }}
+						{{#if nodeAddress }}
 							<button class="button button--no-padding button--fs-sm mr-1" onClick="openTipModal('{{nodeAddress}}', '{{ username }}')">
 								<svg width="21px" height="22px" viewBox="0 0 21 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 									<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -638,9 +638,10 @@
 			// Get max amount for the tip amount
 			getMaxAmount();
 
+			// Get node address for tipping
 			MDS.cmd('getaddress', function(msg) {
 				NODE_ADDRESS = msg.response.miniaddress;
-			})
+			});
 
 			/**
 			 * Checks to see if splash should be shown
@@ -806,9 +807,7 @@
 		// hide preview under start chat box
 		document.getElementById('preview').style.display = 'none';
 
-		text += ` <node_address>${NODE_ADDRESS}</node_address>`;
-
-		createRant(text,"0x00","0x00",function(rant){
+		createRant(text,"0x00","0x00",NODE_ADDRESS,function(rant){
 
 			//ok - now add this message to OUR DB
 			addRantToDB(rant,function(msg){
