--- a/src/user.html
+++ b/src/user.html
@@ -291,7 +291,7 @@
 									</div>
 								</div>
 								<div class="feed-item__actions-right">
-									{{#if hasNodeAddress }}
+									{{#if nodeAddress }}
 										<button class="button button--no-padding button--fs-sm mr-1" onClick="openTipModal('{{nodeAddress}}', '{{ username }}')">
 											<svg width="21px" height="22px" viewBox="0 0 21 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 												<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
