Fixed issue with reacting/boosting in previous build (1.7.2)

--- a/src/reply.html
+++ b/src/reply.html
@@ -19,7 +19,7 @@
 					<h3 class="tip__title mb-5">Tip <span id="tip__name"></span></h3>
 					<p class="mb-7 text-secondary-grey">Enter a tip amount.</p>
 					<div class="position-relative mb-3">
-						<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" min="0.00000001" /></label>
+						<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" step="any" min="0.01" /></label>
 						<img src="./reactions/minima.png" class="tip__minima_icon" alt="Minima icon" />
 					</div>
 					<input id="tip__node-address" type="hidden" readOnly />
