--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,12 @@
 					<h3 class="tip__title mb-5">Tip <span id="tip__name"></span></h3>
 					<p class="mb-7 text-secondary-grey">Enter a tip amount.</p>
 					<div class="position-relative mb-3">
-						<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" min="0.00000001" /></label>
+						<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" step="any" min="0.01" /></label>
 						<img src="./reactions/minima.png" class="tip__minima_icon" alt="Minima icon" />
 					</div>
 					<input id="tip__node-address" type="hidden" readOnly />
 					<div id="tip__node-locked" class="position-relative mb-3" style="display: none;">
-						<label><input id="tip__node-password" type="password" class="tip__input mb-4" placeholder="Node password" min="0.00000001" /></label>
+						<label><input id="tip__node-password" type="password" class="tip__input mb-4" placeholder="Node password" /></label>
 						<img id="password-is-hidden" src="./assets/eye-off.svg" class="tip__tip_icon" alt="Password is hidden" />
 					</div>
 					<button id="tip__submit" class="button button--taller button--primary w-full mb-2" type="submit" disabled>Tip</button>
