--- a/src/user.html
+++ b/src/user.html
@@ -20,7 +20,7 @@
 						<h3 class="tip__title mb-5">Tip <span id="tip__name"></span></h3>
 						<p class="mb-7 text-secondary-grey">Enter a tip amount.</p>
 						<div class="position-relative mb-3">
-							<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" min="0.00000001" /></label>
+							<label><input id="tip__amount" class="tip__input mb-3" type="number" placeholder="Amount" step="any" min="0.01" /></label>
 							<img src="./reactions/minima.png" class="tip__minima_icon" alt="Minima icon" />
 						</div>
 						<input id="tip__node-address" type="hidden" readOnly />
@@ -522,6 +522,11 @@
 
 					// Get max amount for the tip amount in the tip modal
 					getMaxAmount();
+
+					// Get node address for tipping
+					MDS.cmd('getaddress', function(msg) {
+						NODE_ADDRESS = msg.response.miniaddress;
+					});
 
 					selectAllSuperChatters(function(supers){
 						allsuperchatters = supers;
