--- a/src/reply.html
+++ b/src/reply.html
@@ -1048,6 +1048,7 @@
         var msgrow = {};
         msgrow.MESSAGE = encodeStringForDB(text);
         msgrow.USERNAME = MAXIMA_USERNAME;
+        msgrow.ICON    = MAXIMA_ICON;
         msgrow.RECDATE = new Date().getTime();
         msgrow.PARENTID = "0x00";
 
