--- a/src/index.html
+++ b/src/index.html
@@ -1154,7 +1154,7 @@
                 ", " + MAXIMA_USERNAME;
             }
 
-            const iconWrapper = elementToString(renderIcon(MAXIMA_ICON));            
+            const iconWrapper = elementToString(renderIcon(MAXIMA_ICON, MAXIMA_USERNAME));            
 
             document.getElementById("header").innerHTML = templates.header({
               username: MAXIMA_USERNAME,
